--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,20 @@
 {
 	"version": 2,
 	"builds": [
-		{ "src": "manage.py", "use": "@vercel/python" },
-		{ "src": "setup/wsgi.py", "use": "@vercel/python-wsgi" }
+	  {
+		"src": "manage.py",
+		"use": "@vercel/python"
+	  }
 	],
-
 	"routes": [
-		{"src": "/(.*)", "dest": "setup/wsgi.py"}
+	  {
+		"src": "/static/(.*)",
+		"dest": "/static/$1"
+	  },
+	  {
+		"src": "/(.*)",
+		"dest": "manage.py"
+	  }
 	]
-}
+  }
+  
